--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "dotenv": "^4.0.0",
     "firebase": "^3.9.0",
     "react": "^15.5.4",
