--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "firebase": "^3.9.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^3.0.0"
+    "react-google-maps": "^6.3.0",
+    "react-router": "^3.0.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
