--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.5.4",
     "react-google-maps": "^6.3.0",
     "react-router": "^3.0.0",
+    "react-slick": "^0.14.11",
     "superagent": "^3.5.2"
   },
   "devDependencies": {
