--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "food-project",
+  "homepage": "https://danielpdoherty.github.io/food-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,12 +15,14 @@
     "superagent": "^3.5.2"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
   }
 }
